@@ -33,16 +33,8 @@ syn keyword	bklGlobalStat	configuration
 syn keyword	bklGlobalStat	setting
 syn keyword	bklGlobalProp	toolsets
 syn keyword	bklGlobalProp	configurations
-syn match	bklGlobalProp	"\<vs\(2003\|2005\|2008\|2010\|2012\|2013\|2015\|2017\|2019\).generate-solution\ze *=" nextgroup=bklBoolRHS skipwhite
-syn keyword	bklCommonProp	vs2003.solutionfile
-syn keyword	bklCommonProp	vs2005.solutionfile
-syn keyword	bklCommonProp	vs2008.solutionfile
-syn keyword	bklCommonProp	vs2010.solutionfile
-syn keyword	bklCommonProp	vs2012.solutionfile
-syn keyword	bklCommonProp	vs2013.solutionfile
-syn keyword	bklCommonProp	vs2015.solutionfile
-syn keyword	bklCommonProp	vs2017.solutionfile
-syn keyword	bklCommonProp	vs2019.solutionfile
+syn match	bklGlobalProp	"\<\%(msvs\|vs\(2003\|2005\|2008\|2010\|2012\|2013\|2015\|2017\|2019\)\).generate-solution\ze *=" nextgroup=bklBoolRHS skipwhite
+syn match	bklGlobalProp	"\<\%(msvs\|vs\)\%(2003\|2005\|2008\|2010\|2012\|2013\|2015\|2017\|2019\).solutionfile"
 syn keyword	bklCommonProp	gnu.makefile gnu-osx.makefile gnu-suncc.makefile
 
 " Properties common to absolutely all targets.
@@ -56,8 +48,9 @@ syn keyword	bklCommonProp	vs2013.guid vs2013.projectfile contained
 syn keyword	bklCommonProp	vs2015.guid vs2015.projectfile contained
 syn keyword	bklCommonProp	vs2017.guid vs2017.projectfile contained
 syn keyword	bklCommonProp	vs2019.guid vs2019.projectfile contained
+syn keyword	bklCommonProp	msvs.guid msvs.projectfile contained
 syn keyword	bklCommonProp	vs.property-sheets contained
-syn match	bklCommonProp	"vs\(2003\|2005\|2008\|2010\|2012\|2013\|2015\|2017\|2019\)\.option\(\.\w\+\)\{1,2}" contained
+syn match	bklCommonProp	"\%(msvs\|vs\(2003\|2005\|2008\|2010\|2012\|2013\|2015\|2017\|2019\)\)\.option\(\.\w\+\)\{1,2}" contained
 
 " Properties that can occur inside action targets only.
 syn keyword	bklActionProp	commands inputs outputs contained
