@@ -150,7 +150,23 @@ class VS201xToolsetBase(VSToolsetBase):
             else:
                 n.add("CharacterSet", "MultiByte")
             if self.platform_toolset:
-                n.add("PlatformToolset", self.platform_toolset)
+                # Special case of "msvs" toolset, which means to set the
+                # platform toolset appropriately depending on the MSVS version.
+                if self.platform_toolset == 'msvs':
+                    for v in all_versions:
+                        toolset_ver = all_versions[v]
+
+                        # This happens for MSVS 2010 which doesn't specify the
+                        # toolset explicitly.
+                        if not toolset_ver.platform_toolset:
+                            continue
+
+                        node_toolset = Node("PlatformToolset", toolset_ver.platform_toolset)
+                        node_toolset["Condition"] = "'$(VisualStudioVersion)'=='%s'" % toolset_ver.version
+                        n.add(node_toolset)
+                else:
+                    n.add("PlatformToolset", self.platform_toolset)
+
             self._add_extra_options_to_node(cfg, n)
             root.add(n)
 
@@ -591,6 +607,7 @@ class VS2010Toolset(VS201xToolsetBase):
     name = "vs2010"
 
     version = 10
+    msvs_version = "2010"
     proj_versions = [10]
     # don't set to "v100" because vs2010 doesn't explicitly set it by default:
     platform_toolset = None
@@ -634,6 +651,7 @@ class VS2012Toolset(VS201xToolsetBase):
     name = "vs2012"
 
     version = 11
+    msvs_version = "2012"
     proj_versions = [10, 11]
     platform_toolset = "v110"
     Solution = VS2012Solution
@@ -680,6 +698,7 @@ class VS2013Toolset(VS201xToolsetBase):
     name = "vs2013"
 
     version = 12
+    msvs_version = "2013"
     proj_versions = [10, 11, 12]
     platform_toolset = "v120"
     tools_version = "12.0"
@@ -729,6 +748,7 @@ class VS2015Toolset(VS201xToolsetBase):
     name = "vs2015"
 
     version = 14
+    msvs_version = "2015"
     proj_versions = [10, 11, 12, 14]
     platform_toolset = "v140"
     tools_version = "14.0"
@@ -776,6 +796,7 @@ class VS2017Toolset(VS201xToolsetBase):
     name = "vs2017"
 
     version = 15
+    msvs_version = "2017"
     proj_versions = [10, 11, 12, 14, 15]
     platform_toolset = "v141"
     tools_version = "15.0"
@@ -823,8 +844,140 @@ class VS2019Toolset(VS201xToolsetBase):
     name = "vs2019"
 
     version = 16
+    msvs_version = "2019"
     proj_versions = [10, 11, 12, 14, 15, 16]
     platform_toolset = "v142"
     tools_version = "16.0"
     Solution = VS2019Solution
     Project = VS2019Project
+
+
+all_versions = {
+        10: VS2010Toolset,
+        11: VS2012Toolset,
+        12: VS2013Toolset,
+        14: VS2015Toolset,
+        15: VS2017Toolset,
+        16: VS2019Toolset,
+    }
+
+class MSVSSolutionsBundle(object):
+    """
+    Representation of one or more MSVS solution files.
+
+    ``MSVSToolset`` can generate several solution files for different MSVS
+    versions, depending on which msvsNNNN.solutionfile options are specified.
+    """
+
+    def __init__(self, toolset, module):
+        self.solutions = {}
+        for v in all_versions:
+            toolset_ver = all_versions[v]
+            sln = module["%s%s.solutionfile" % (toolset.name, toolset_ver.msvs_version)]
+            if sln:
+                self.solutions[v] = toolset_ver.Solution(toolset, module, sln)
+
+        # It's ok if self.solutions remains empty, we simply won't generate any
+        # solution files in this case -- just the project ones.
+
+    def add_project(self, prj):
+        for s in self.solutions.values():
+            s.add_project(prj)
+
+    def add_subsolution(self, subsol):
+        for v in self.solutions:
+            if not v in subsol.solutions:
+                continue
+
+            self.solutions[v].add_subsolution(subsol.solutions[v])
+
+    def write(self):
+        for s in self.solutions.values():
+            s.write()
+
+
+class MSVSToolset(VS201xToolsetBase):
+    """
+    Any Microsoft Visual Studio version using MSBuild projects.
+
+    Files generated by this toolset can be used with any Microsoft Visual
+    Studio version from 2010 to 2019.
+
+
+    Special properties
+    ------------------
+
+    In addition to the properties described below, it's possible to specify any
+    of the ``vcxproj`` properties directly in a bakefile. To do so, you have to
+    set specially named variables on the target.
+
+    The variables are prefixed with ``msvs.option.``, followed by node name and
+    property name. The following nodes are supported:
+
+      - ``msvs.option.Globals.*``
+      - ``msvs.option.Configuration.*``
+      - ``msvs.option.*`` (this is the unnamed ``PropertyGroup`` with
+        global settings such as ``TargetName``)
+      - ``msvs.option.ClCompile.*``
+      - ``msvs.option.ResourceCompile.*``
+      - ``msvs.option.Link.*``
+      - ``msvs.option.Lib.*``
+      - ``msvs.option.Manifest.*``
+
+    These variables can be used in several places in bakefiles:
+
+      - In targets, to applied them as project's global settings.
+      - In modules, to apply them to all projects in the module and its submodules.
+      - On per-file basis, to modify file-specific settings.
+
+    Examples:
+
+    .. code-block:: bkl
+
+        msvs.option.GenerateManifest = false;
+        msvs.option.Link.CreateHotPatchableImage = Enabled;
+
+        crashrpt.cpp::msvs.option.ClCompile.ExceptionHandling = Async;
+    """
+
+    name = "msvs"
+
+    # There is no specific version associated with this toolset, it is
+    # determined by the version of MSVS used for actual building.
+    version = None
+
+    # This toolset is handled specially in VS201xToolsetBase, see there.
+    platform_toolset = 'msvs'
+
+    # This is used in VSToolsetBase to check for version compatibility.
+    proj_versions = all_versions.keys()
+
+    # This tools version is supported by MSVS 2010 and still works just fine
+    # for MSVS 2019.
+    tools_version = "4.0"
+
+    # We use a special multi-solution class, but just the same plain project
+    # class as all the other MSVS 201x toolsets.
+    Solution = MSVSSolutionsBundle
+    Project = VS2010Project
+
+    # Replace the base class method, as we don't want to have msvs.solutionfile
+    # property defined there, we need per-version solution files. We don't need
+    # the msvs.generate-solution property it would have defined neither, as it's
+    # the same as simply not defining any of msvsNNNN.solutionfile properties at
+    # all.
+    @classmethod
+    def properties_module(cls):
+        for v in cls.proj_versions:
+            yield Property("%s%s.solutionfile" % (cls.name, all_versions[v].msvs_version),
+                           type=PathType(),
+                           default=bkl.expr.NullExpr(),
+                           inheritable=False,
+                           doc="""
+                               File name of the solution file for the specified version.
+
+                               Solution files are generated only for the MSVS versions
+                               for which the corresponding option is specified.
+                               In particular, if no such properties are defined,
+                               no solution files will be generated at all.
+                               """)
