@@ -1,0 +1,8 @@
+toolsets = msvs;
+
+msvs2017.solutionfile = single_project_141.sln;
+msvs2019.solutionfile = single_project_142.sln;
+
+program single_project {
+    sources { single_project.cpp }
+}
