@@ -5,6 +5,7 @@ New Features
 ------------
 
 - Add MSVS 2015, 2017 and 2019 toolsets support.
+- Add "msvs" version-independent MSVS toolset.
 - Allow specifying configurations/platforms for external projects.
 - Support including user-defined property sheets in MSVS 201x toolsets.
 - Add "inputs" property for action targets.
